tests/compile-fail/tracked_fn_return_ref.stderr
error: lifetime may not live long enough
  --> tests/compile-fail/tracked_fn_return_ref.rs:15:67
   |
15 | fn tracked_fn_return_ref<'db>(db: &'db dyn Db, input: MyInput) -> &'db str {
   |                          --- lifetime `'db` defined here          ^ requires that `'db` must outlive `'static`

error: lifetime may not live long enough
  --> tests/compile-fail/tracked_fn_return_ref.rs:23:6
   |
20 | fn tracked_fn_return_struct_containing_ref<'db>(
   |                                            --- lifetime `'db` defined here
...
23 | ) -> ContainsRef<'db> {
   |      ^^^^^^^^^^^ requires that `'db` must outlive `'static`
